# agent-orchestrator

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  config.toml  workflow.toml
.github/workflows/: ci.yml
src/: askpass.rs  config.rs  dispatcher.rs  git.rs  github.rs  harness.rs  hermes.rs  hermes_api.rs  hermes_append.rs  hooks.rs  main.rs  poller.rs  runner.rs  template.rs  trigger.rs  workflow.rs
workflows/: implement-issue.toml  issue_mention.toml  pr-review-comment.toml
workflows/basic/: config.toml
workflows/software-impl/: config.toml
