[package]
name = "agent-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"

[dev-dependencies]
tempfile = "3"
